# Practice-Projects

resume-builder/backend/: README.md  pyproject.toml  requirements.txt
resume-builder/backend/app/: __init__.py  config.py  main.py  models.py  schemas.py
resume-builder/backend/app/routers/: __init__.py  resume.py
resume-builder/backend/app/services/: __init__.py  ai_service.py  pdf_service.py  resume_builder.py
resume-builder/frontend/: README.md  package-lock.json  package.json
resume-builder/frontend/app/: globals.css  layout.tsx  page.tsx
resume-builder/frontend/app/dashboard/: page.tsx
resume-builder/frontend/app/preview/: page.tsx
resume-builder/frontend/components/: EducationSection.tsx  ExperienceSection.tsx  Loader.tsx  ResumeForm.tsx  ResumePreview.tsx  SkillsInput.tsx  TemplateSelector.tsx
resume-builder/frontend/lib/: api.ts
resume-builder/frontend/store/: resumeStore.ts
resume-builder/frontend/types/: resume.ts
